Pugilist 2.5.4 without clamp